# Allotment

./: CMakeLists.txt  README  allocator.c  allocator.h  tests.c
tests/: allocator_test.c  allocator_test.h
