#    Copyright (C) 2011 Allotment authors,
#    
#    This file is part of Allotment.
#    
#    Allotment is free software: you can redistribute it and/or modify
#    it under the terms of the GNU Lesser General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    Allotment is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Lesser General Public License for more details.
#
#    You should have received a copy of the GNU Lesser General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(AllotmentSources allocator)

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}")
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/tests")

ADD_LIBRARY(allotment SHARED ${AllotmentSources})
ADD_LIBRARY(allotment_static STATIC ${AllotmentSources})

SET(AllotmentTestSources tests.c tests/allocator_test.c)

ADD_EXECUTABLE(allotment_test ${AllotmentTestSources})
TARGET_LINK_LIBRARIES(allotment_test allotment check)
